fix: css adjustments

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ h1, h2, p {
 
 .card {
     border-radius: 20px;
-    height: 500px;
+    height: 520px;
     width: 500px;
     background-color: aliceblue;
     position: relative;
@@ -38,7 +38,7 @@ h1, h2, p {
     height: 2px;
     width: 500px;
     background-color: rgb(243, 240, 240);
-    bottom: 100px;
+    bottom: 120px;
 }
 
 h1 {
@@ -63,12 +63,18 @@ h1 {
     justify-content: center;
     gap: 0px;
     justify-items: center;
-    margin: 70px 35px 0px 35px;
+    margin: 75px 35px 0px 35px;
 }
 
 .item h2 {
     color: #1d2b1d;
     font-size: 22px;
+    text-align: center;
+}
+
+.item p {
+    margin-top: 10px;
+    text-align: center;
 }
 
 .foto-perfil {
